--- a/css/main.css
+++ b/css/main.css
@@ -442,6 +442,9 @@ p a:link:hover, p a:visited:hover {
   height: auto;
   margin: 30px 0 30px 0; }
 
+a.image {
+  border-bottom: none !important; }
+
 .post .meta {
   font-size: 1em;
   padding: 0; }
@@ -555,7 +558,13 @@ p a:link:hover, p a:visited:hover {
     width: auto; }
   .primary .content-wrap-alt {
     margin: 20px 0 0 0;
-    width: 100%; } }
+    width: 100%; }
+  .project {
+    width: 100%; }
+  .post {
+    width: 90%; }
+  .post p {
+    font-size: 17px; } }
 
 /*Small Screen */
 @media (max-width: 850px) {
